# anyth2data

./: .gitignore  README.md  config_template  main.py  pyproject.toml
anyth2md/: anyth2md.py
chunk_dir/: 2 peter.md.jsonl
conversion_results/(Preaching the Word) Exodus/: (Preaching the Word) Exodus.md  (Preaching the Word) Exodus_meta.json
conversion_results/(Preaching the wiord) john_1/: (Preaching the wiord) john_1.md  (Preaching the wiord) john_1_meta.json
conversion_results/(Preaching the word) 1-2_timothy_and_titus/: (Preaching the word) 1-2_timothy_and_titus.md  (Preaching the word) 1-2_timothy_and_titus_meta.json
conversion_results/(Preaching the word) 1-3_john/: (Preaching the word) 1-3_john.md  (Preaching the word) 1-3_john_meta.json
conversion_results/(Preaching the word) hebrews/: (Preaching the word) hebrews.md  (Preaching the word) hebrews_meta.json
conversion_results/(Preaching the word) philippians_colossians_and_philemon/: (Preaching the word) philippians_colossians_and_philemon.md  (Preaching the word) philippians_colossians_and_philemon_meta.json
conversion_results/(Preaching the word) revelation/: (Preaching the word) revelation.md  (Preaching the word) revelation_meta.json
conversion_results/1 Corinthians/: 1 Corinthians.md  1 Corinthians_meta.json
json2qa/: json2QA.py  json2bibleQA.py
llm/: __init__.py  llm.py
markdown_process/: __init__.py  process.py
pipelines/: __init__.py  pdf2qa.py  pipelines.py
prompts/: qa_message.md  qa_system.md
tests/: process_tests.py
utils/: config.py  process.py
(+58 files in other folders)
